# village-rs

./: Cargo.toml  flake.nix
src/: main.rs
web-ui/: index.html  update-deps.sh
